bk_ida/gccida/c1/reachable_next_level
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3313:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code  reachable_next_level(  struct eh_region *region, tree type_thrown,  struct reachable_info *info) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3315:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3317:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code v6; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *aka; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3326:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3328:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type_list; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3332:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3334:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code v23; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3388:20: error: expected expression
aka = ( tree_node *)prev_try->aka; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3388:9: error: use of undeclared identifier 'tree_node'
aka = ( tree_node *)prev_try->aka; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3420:20: error: expected expression
v15 = ( tree_node *)v13->aka; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/except.c:3420:9: error: use of undeclared identifier 'tree_node'
v15 = ( tree_node *)v13->aka; 
        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reachable_next_level/src/obj/except.o] Error 1
